[package]
name = "byte"
version = "0.1.0"
edition = "2021"
authors = ["tako"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
twilight = "0.15.1"
twilight-cache-inmemory = "0.15.4"
twilight-gateway = "0.15.4"
twilight-gateway-queue = "0.15.4"
twilight-http = "0.15.4"
twilight-mention = "0.15.3"
twilight-model = "0.15.4"
twilight-standby = "0.15.4"
twilight-util = "0.15.4"
